feat: Add main_landing_page logo

--- a/FE/vote24/src/components/css/main.css
+++ b/FE/vote24/src/components/css/main.css
@@ -1,3 +1,9 @@
-.container {
-  height: screen;
+.body {
+  height: 80vh;
+}
+
+.header_image {
+  width: 400px;
+  height: 300px;
+  object-fit: cover;
 }
