--- a/FE/styles/surveycreate.css
+++ b/FE/styles/surveycreate.css
@@ -2,7 +2,7 @@
   min-width: 400px;
   min-height: 100vh;
   max-width: 800px;
-  background-color: skyblue;
+  background-color: #ffc107;
 }
 
 .no-border {
