--- a/FE/styles/footer.css
+++ b/FE/styles/footer.css
@@ -1,16 +1,3 @@
-.ul {
-  list-style: none;
-}
-
-.a {
-  text-decoration: none;
-  color: black;
-}
-
-.footer {
-  position: absolute;
-  left: 0px;
-  bottom: 0px;
-  height: 60px;
-  width: 100%;
+.footer-box {
+  background-color: #e1edff;
 }
