feat: Edit user page & SurveyCreateForm
- 유저 페이지 레이아웃 & 설문/공지/이벤트 리스트 출력 완료
- 설문 생성 시 유효성 검사 및 카테고리 추가

--- a/FE/styles/homeuser.css
+++ b/FE/styles/homeuser.css
@@ -2,7 +2,15 @@
   background-color: #84c3dc;
 }
 
+.home-user-survey-button:hover {
+  background-color: #acd0df;
+}
 .home-user-notice-button {
+  background-color: #076c94;
+  height: 100px;
+}
+
+.home-user-notice-button:hover {
   background-color: #03435c;
   height: 100px;
 }
