--- a/FE/styles/mainonlogin.module.css
+++ b/FE/styles/mainonlogin.module.css
@@ -1,3 +1,12 @@
+.goButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  width: 40px;
+  height: 40px;
+}
+
 .goButton:hover {
   background-color: indigo;
 }
