--- a/FE/styles/surveycreateform.module.css
+++ b/FE/styles/surveycreateform.module.css
@@ -3,5 +3,13 @@
   min-height: 100vh;
   max-width: 800px;
   background-color: #f8f9fa;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   /* background-color: #ffc107; */
+}
+
+.backButtonBox {
+  position: absolute;
+  top: -30px;
 }
