--- a/FE/styles/footer.module.css
+++ b/FE/styles/footer.module.css
@@ -1,3 +1,12 @@
 .footerBox {
   background-color: #edeeff;
 }
+
+.footerFrame {
+  width: 100%;
+  height: 1.5rem;
+}
+
+.footerPath {
+  fill: #0d6efd;
+}
