--- a/FE/styles/globals.css
+++ b/FE/styles/globals.css
@@ -13,10 +13,12 @@ a {
 
 * {
   box-sizing: border-box;
+  font-family: "Spoqa Han Sans Neo", "sans-serif";
 }
 
 .navbar {
   width: 100%;
+  height: 70px;
 }
 
 .halfPage {
