--- a/FE/styles/main.css
+++ b/FE/styles/main.css
@@ -5,7 +5,6 @@
 .main_title {
   font-size: 5rem;
   line-height: 1;
-  z-index: 50;
 }
 .main_body {
   width: 600px;
@@ -14,10 +13,9 @@
 
 .header_image {
   position: absolute;
-  top: 35%;
-  width: 600px;
-  height: 322px;
-  object-fit: cover;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   opacity: 75%;
 }
 
@@ -31,5 +29,4 @@
   width: 300px;
   height: 100px;
   border-radius: 15px;
-  z-index: 50;
 }
