feat: Edit search bar design

--- a/FE/styles/searchbar.module.css
+++ b/FE/styles/searchbar.module.css
@@ -1,16 +1,14 @@
 .searchBox {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  position: relative;
   width: 200px;
 }
-
+/* 
 .searchInput {
   border: none;
   outline: none;
   margin: 5px;
   box-sizing: border-box;
-}
+} */
 
 /* .searchIcon {
   position: absolute;
