feat: Edit main page layout

--- a/FE/styles/mainheader.module.css
+++ b/FE/styles/mainheader.module.css
@@ -40,6 +40,6 @@
   width: 630px;
 }
 
-.header .imageContainer .imgWrapper .image:hover {
+.header .imageContainer .imgWrapper:hover {
   transform: scale(1.1);
 }
