--- a/FE/styles/mainonlogin.module.css
+++ b/FE/styles/mainonlogin.module.css
@@ -5,8 +5,9 @@
   color: white;
   width: 40px;
   height: 40px;
+  transition: 0.5s;
 }
 
 .goButton:hover {
-  background-color: indigo;
+  background-color: rgb(184, 247, 37);
 }
