--- a/FE/styles/globals.css
+++ b/FE/styles/globals.css
@@ -16,9 +16,25 @@ a {
   font-family: "Spoqa Han Sans Neo", "sans-serif";
 }
 
+.min-vh-80 {
+  min-height: 80vh;
+}
+
+.min-w-50 {
+  min-width: 50%;
+}
+
+.fs-0 {
+  font-size: 0.8rem;
+}
+
 .navbar {
   width: 100%;
   min-height: 70px;
+}
+
+.nav-link:hover {
+  color: #5f4dee !important;
 }
 
 .halfPage {
