--- a/FE/styles/navitem.module.css
+++ b/FE/styles/navitem.module.css
@@ -1,11 +1,7 @@
 .navItemUser {
-  border-bottom: 3px solid #c4f9ff;
+  color: #5f4dee !important;
 }
 
 .navItem {
-  border-bottom: 3px solid #0d6efd;
-}
-
-.navItemWidth {
-  width: 110px;
+  color: #5f4dee !important;
 }
