feat: Design & Layout

--- a/FE/styles/footer.module.css
+++ b/FE/styles/footer.module.css
@@ -1,5 +1,13 @@
-.footerBox {
-  background-color: #edeeff;
+.footerColor {
+  background-color: #c4f9ff;
+}
+
+.footerUser1 {
+  background-color: #c4f9ff;
+}
+
+.footerUser2 {
+  background-color: #ffeecb;
 }
 
 .footerFrame {
