--- a/FE/styles/surveydetailuser.css
+++ b/FE/styles/surveydetailuser.css
@@ -1,11 +1,7 @@
-.survey-option-box {
-  background-color: #f9eced;
-}
-
 .survey-user-submit-button {
-  background-color: #076c94;
+  background-color: #ffc107;
 }
 
 .survey-user-submit-button:hover {
-  background-color: #03435c;
+  background-color: #c79500;
 }
