--- a/FE/styles/detail.module.css
+++ b/FE/styles/detail.module.css
@@ -85,11 +85,8 @@
 
 .option {
   display: flex;
-  margin: 10px 60px;
-}
-
-.optionContext {
-  width: 200px;
+  justify-content: space-between;
+  margin: 15px 60px;
 }
 
 .optionCnt {
