--- a/FE/styles/backbutton.module.css
+++ b/FE/styles/backbutton.module.css
@@ -1,10 +1,15 @@
 .backButton {
   position: absolute;
-  left: 10px;
+  left: 2rem;
   width: 30px;
   height: 30px;
   outline: none;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.backButtonIcon {
+  font-weight: bold;
+  font-size: 2rem;
 }
