--- a/FE/styles/table.css
+++ b/FE/styles/table.css
@@ -1,6 +1,6 @@
 .div-table {
   border-radius: 1em;
-  height: 700px;
+  min-height: 700px;
   z-index: 1;
   position: relative;
   border: 2px solid;
